--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/fonts/icomoon.eot?7ahdk3');
-  src:  url('/fonts/icomoon.eot?7ahdk3#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.ttf?7ahdk3') format('truetype'),
-    url('/fonts/icomoon.woff?7ahdk3') format('woff'),
-    url('/fonts/icomoon.svg?7ahdk3#icomoon') format('svg');
+  src:  url('/fonts/icomoon.eot?nx3elr');
+  src:  url('/fonts/icomoon.eot?nx3elr#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?nx3elr') format('truetype'),
+    url('/fonts/icomoon.woff?nx3elr') format('woff'),
+    url('/fonts/icomoon.svg?nx3elr#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -66,20 +66,20 @@
 .icon-info:before {
   content: "\e907";
 }
-.icon-keyboard:before {
-  content: "\e908";
+.icon-sound-alt:before {
+  content: "\e90e";
 }
-.icon-mouse2:before {
-  content: "\e909";
-}
-.icon-heart:before {
-  content: "\e904";
+.icon-soundoff:before {
+  content: "\e90f";
 }
 .icon-pause:before {
   content: "\e903";
 }
 .icon-eyedropper:before {
   content: "\e90a";
+}
+.icon-music:before {
+  content: "\e911";
 }
 .icon-reply:before {
   content: "\e905";
@@ -92,4 +92,13 @@
 }
 .icon-question:before {
   content: "\ea09";
+}
+.icon-keyboard:before {
+  content: "\e908";
+}
+.icon-mouse2:before {
+  content: "\e909";
+}
+.icon-heart:before {
+  content: "\e904";
 }
