add merchant's shop.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -898,7 +898,7 @@ html, body {
     content: "\e8fd";
 }
 
-#taskList, #goodList, #helpList, #empty, #gameover, #gameclear {
+#taskList, #goodList, #helpList, #empty, #shop, #gameover, #gameclear {
     margin: auto;
     position: absolute;
     left: 0;
@@ -1150,6 +1150,40 @@ html, body {
     margin-bottom: 3em;
     overflow: visible;
     position: static;
+}
+
+/* shop */
+
+#shop {
+    font-size: 20px;
+
+    width: 20em;
+    height: 50%;
+    padding: 1em;
+    border-radius: 1em;
+
+    background-color: #faf4e8;
+}
+
+#shop>div::-webkit-scrollbar {
+    width: 0;
+}
+
+#shop>div {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow-y: auto;
+}
+
+#shop .icon-times {
+    position: absolute;
+    top: -0.5em;
+    right: -0.5em;
+    background-color: #f9545b;
+    font-size: 1.5em;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 /* help list */
